[project]
name = "comfyui-coremlsuite"
description = "This extension contains a set of custom nodes for ComfyUI that allow you to use Core ML models in your ComfyUI workflows."
version = "1.0.1"
license-files = [ "LICENSE" ]
dependencies = ["python-coreml-stable-diffusion @ git+https://github.com/nakayama900/ml-stable-diffusion.git", "coremltools>=7.1", "overrides", "diffusers>=0.22", "peft>=0.6.2", "omegaconf>=2.3"]
requires-python=">=3.12"

[project.urls]
Repository = "https://github.com/aszc-dev/ComfyUI-CoreMLSuite"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "aszc-dev"
DisplayName = "ComfyUI-CoreMLSuite"
Icon = ""

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
